added mostly complete galaxy generation (some detail skipped such as planetary data, stars), math and rand helpers
Signed-off-by: Miles Whiticker <miles.whiticker@gmail.com>

--- a/space_sim/space_sim.vcxproj
+++ b/space_sim/space_sim.vcxproj
@@ -72,22 +72,38 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AppManager.cpp" />
+    <ClCompile Include="AsteroidBelt.cpp" />
+    <ClCompile Include="Defines_math.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="guicon.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="OrionSpur.cpp" />
+    <ClCompile Include="Planet.cpp" />
     <ClCompile Include="SceneMainMenu.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="SFGManager.cpp" />
     <ClCompile Include="SimManager.cpp" />
+    <ClCompile Include="HabitableObject.cpp" />
+    <ClCompile Include="StarSystem.cpp" />
+    <ClCompile Include="StellarGroup.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AppManager.hpp" />
+    <ClInclude Include="AsteroidBelt.hpp" />
+    <ClInclude Include="Defines_Math.h" />
+    <ClInclude Include="GameManager.hpp" />
     <ClInclude Include="guicon.h" />
+    <ClInclude Include="Planet.hpp" />
+    <ClInclude Include="HabitableObject.hpp" />
     <ClInclude Include="Scene.hpp" />
     <ClInclude Include="SceneManager.hpp" />
     <ClInclude Include="SceneTypes.h" />
     <ClInclude Include="SFGManager.hpp" />
     <ClInclude Include="SimManager.hpp" />
+    <ClInclude Include="OrionSpur.hpp" />
+    <ClInclude Include="StarSystem.hpp" />
+    <ClInclude Include="StellarGroup.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
