--- a/space_sim/space_sim.vcxproj
+++ b/space_sim/space_sim.vcxproj
@@ -37,7 +37,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Users\mcp\Desktop\space_sim\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)../include;$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)../lib/$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -79,9 +79,10 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OrionSpur.cpp" />
     <ClCompile Include="Planet.cpp" />
-    <ClCompile Include="SceneMainMenu.cpp" />
+    <ClCompile Include="Scene_MainMenu.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="Scene_Game.cpp" />
     <ClCompile Include="SFGManager.cpp" />
     <ClCompile Include="SimManager.cpp" />
     <ClCompile Include="HabitableObject.cpp" />
@@ -99,6 +100,8 @@
     <ClInclude Include="Scene.hpp" />
     <ClInclude Include="SceneManager.hpp" />
     <ClInclude Include="SceneTypes.h" />
+    <ClInclude Include="Scene_Game.hpp" />
+    <ClInclude Include="Scene_MainMenu.hpp" />
     <ClInclude Include="SFGManager.hpp" />
     <ClInclude Include="SimManager.hpp" />
     <ClInclude Include="OrionSpur.hpp" />
