personnel allocation, removed Resource::MACHINERY
Signed-off-by: Miles Whiticker <miles.whiticker@gmail.com>

--- a/space_sim/space_sim.vcxproj.filters
+++ b/space_sim/space_sim.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="HabitableObject_UpgradeSpecial.cpp">
       <Filter>Source Files\Galaxy\HabitableObject\Upgrade</Filter>
     </ClCompile>
+    <ClCompile Include="HabitableObject_AllocatePersonnel.cpp">
+      <Filter>Source Files\Galaxy\HabitableObject</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AppManager.hpp">
