--- a/space_sim/space_sim.vcxproj
+++ b/space_sim/space_sim.vcxproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <ClCompile Include="AppManager.cpp" />
     <ClCompile Include="Asteroid.cpp" />
+    <ClCompile Include="HabitableObject_AllocatePersonnel.cpp" />
     <ClCompile Include="HabitableObject_GenerateData.cpp" />
     <ClCompile Include="HabitableObject_UpdateDaily.cpp" />
     <ClCompile Include="HabitableObject_UpdateMonthly.cpp" />
