--- a/space_sim/space_sim.vcxproj
+++ b/space_sim/space_sim.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OrionSpur.cpp" />
     <ClCompile Include="Planet.cpp" />
+    <ClCompile Include="Resources.cpp" />
     <ClCompile Include="Scene_MainMenu.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
@@ -112,6 +113,7 @@
     <ClInclude Include="Asteroid.hpp" />
     <ClInclude Include="Industry.h" />
     <ClInclude Include="MathHelpers.h" />
+    <ClInclude Include="Misc.h" />
     <ClInclude Include="TimeRate.h" />
     <ClInclude Include="DisplayableObject.hpp" />
     <ClInclude Include="GameHelpers.hpp" />
